--- a/style.css
+++ b/style.css
@@ -4,26 +4,24 @@
     box-sizing: border-box;
 }
 body {
-    background: rgb(112, 112, 112) url('images/fundo.png') no-repeat fixed right bottom;
+    background: #707070 url('images/fundo.png') no-repeat fixed right bottom;
     background-size: cover;
 }
 main {
-    padding: 50px;
+    padding: 30px;
     min-height: 100vh;
-    background-color: rgba(0, 0, 0, 0.089);
+    background-color: #00000021;
 }
 .total-area {
     display: flex;
     width: 100%;
     min-height: 90vh;
+    background-color: #ffffff42;
+    border-radius: 20px;
 }
 .left, .right {
     flex: 1;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.486);
-}
-.left {
-    border-radius: 20px 0px 0px 20px;
 }
 .actual-date--area {
     padding: 20px;
@@ -41,37 +39,37 @@ main {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     letter-spacing: 2px;
-    background-color: rgb(0, 7, 37);
+    background-color: #000725;
     max-width: 180px;
     border-radius: 5px;
     text-align: center;
     color: cyan;
 }
 .calendar {
-    background-color:  rgba(255, 255, 255, 0.295);;
+    background-color:  #ffffff93;;
     border: 1px solid #ccc;
-    border-radius: 7px;
 }
 .month-control {
     display: flex;
     justify-content: space-between;
     padding: 16px 10px;
-    background-color: #7cf5fe44;
+    background-color: #000725;
+    color: #00ffff;
 }
 .month-control .control {
-    background-color: rgba(0, 132, 255, 0.185);
+    background-color: #013e77;
     padding: 5px;
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    box-shadow: 1px 1px 2px;
+    box-shadow: 1px 1px 3px #3da1ffea;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
 .month-control .control:hover {
-    background-color: rgba(0, 132, 255, 0.596);
+    background-color: #0084ffc2;
 }
 .month-control .month-calendar {
     font-family: 'Courier New', Courier, monospace;
@@ -101,17 +99,14 @@ main {
     border-radius: 10px;
 }
 .month-day--cell:hover {
-    background-color: rgb(236, 236, 236);
+    background-color: #0084ff98;
     cursor: pointer;
 }
 [week-day-cell='domingo'],[week-day-cell='sábado']{
-    color:rgb(87, 110, 126);
+    color:#576e7e;
 }
 .previous-days, .next-days {
     color: #cacaca;
-}
-.right {
-    border-radius: 0px 20px 20px 0px;
 }
 .right h1 {
     margin-bottom: 10px;
@@ -120,11 +115,11 @@ main {
     font-family: 'Courier New', Courier, monospace;
 }
 .notes {
-    background-color: rgba(255, 255, 255, 0.295);
-    height: 90%;
+    background-color: #ffffff8e;
+    height: 90vh;
     width: 100%;
     padding: 10px;
-    border: 1px solid rgb(235, 235, 235);
+    border: 1px solid #ebebeb;
     font-family: 'Courier New', Courier, monospace;
     overflow-y: auto;
     overflow-x: hidden;
@@ -142,15 +137,17 @@ main {
     background-color: #4a4d5281;
 }
 .notes::-webkit-scrollbar-thumb {
-    background-color: rgb(0, 31, 61);
+    background-color: #001f3d;
     border-radius: 20px;
 }
 .notes::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(36, 63, 90);
+    background-color: #243f5a;
 }
-
+.current-date-calendar {
+    padding: 10px 0px;
+}
 .note-item-modal {
-    background-color: #5097d5b9;
+    background-color: #51a0e6;
     border-radius: 2px;
     box-shadow: 1px 1px 3px;
     padding: 10px;
@@ -189,8 +186,8 @@ main {
     display: none;
 }
 .no-notes {
-    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px;
 }
