--- a/style.css
+++ b/style.css
@@ -62,11 +62,12 @@ main {
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    box-shadow: 1px 1px 3px #3da1ffea;
+    box-shadow: -1px 2px 2px #3da1ffd0;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    font-size: 23px;
 }
 .month-control .control:hover {
     background-color: #0084ffc2;
