--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background: #707070 url('images/fundo.png') no-repeat fixed right bottom;
-    background-size: cover;
+    background-color: #000725;
 }
 main {
     padding: 30px;
@@ -15,13 +14,17 @@ main {
 .total-area {
     display: flex;
     width: 100%;
-    min-height: 90vh;
+    min-height: 80vh;
     background-color: #ffffff42;
     border-radius: 20px;
 }
+.left{
+    border-right: 1px solid #00000038;
+}
 .left, .right {
     flex: 1;
-    padding: 20px;
+    padding: 15px;
+    margin: 20px 0px;
 }
 .actual-date--area {
     padding: 20px;
@@ -34,6 +37,7 @@ main {
     font-weight: bolder;
     font-size: 20px;
     letter-spacing: 1px;
+    color: rgb(248, 251, 255);
 }
 .actual-hour {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -47,7 +51,7 @@ main {
 }
 .calendar {
     background-color:  #ffffffcb;;
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc;
 }
 .month-control {
     display: flex;
@@ -100,30 +104,45 @@ main {
     border-radius: 10px;
 }
 .month-day--cell:hover {
-    background-color: #0084ff98;
+    background-color: #0084ff49;
+    color: #000000;
     cursor: pointer;
 }
 [week-day-cell='domingo'],[week-day-cell='sábado']{
     color:#576e7e;
 }
 .previous-days, .next-days {
-    color: #cacaca;
+    color: #bbbbbb;
+}
+.today {
+    background-color: #013e77;
+    color:#fff;
+}
+.selected {
+    background-color: #0084ff9c;
+    color: #000725;
 }
 .right h1 {
+    margin: auto;
     margin-bottom: 10px;
     text-align: center;
-    margin: auto;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    color: #fff;
 }
 .notes {
-    background-color: #ffffff8e;
-    height: 90vh;
+    background: #707070 url('images/fundo.png') no-repeat right bottom;
+    background-size: cover;
+    min-height: 80vh;
     width: 100%;
     padding: 10px;
     border: 1px solid #ebebeb;
+    border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
     overflow-y: auto;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
    
     /*mozilla*/
     scrollbar-width: thin;
@@ -144,14 +163,17 @@ main {
 .notes::-webkit-scrollbar-thumb:hover {
     background-color: #243f5a;
 }
-.current-date-calendar {
+.current-date-selected {
     padding: 10px 0px;
+    font-weight: bold;
 }
 .note-item-modal {
+    display: none;
     background-color: #51a0e6;
     border-radius: 2px;
     box-shadow: 1px 1px 3px;
     padding: 10px;
+    margin: 10px 0px;
 }
 .note-menu {
     display: flex;
@@ -191,4 +213,5 @@ main {
     justify-content: center;
     align-items: center;
     padding: 30px;
+    height: 100%;
 }
