--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     background-color: #000725;
 }
 main {
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
     padding: 30px;
     min-height: 100vh;
     background-color: #00000021;
@@ -14,8 +16,8 @@ main {
 .total-area {
     display: flex;
     width: 100%;
-    min-height: 80vh;
-    background-color: #ffffff42;
+    min-height: 70vh;
+    background-color: #6256cf;
     border-radius: 20px;
 }
 .left{
@@ -214,4 +216,18 @@ main {
     align-items: center;
     padding: 30px;
     height: 100%;
+}
+
+@media (max-width:720px) {
+    main {
+        padding: 0;
+    }
+    .total-area {
+        border-radius: 0;
+        flex-direction: column;
+    }
+    .left {
+        border-right:0px;
+        border-bottom: 1px solid #00000038;
+    }
 }
