--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
     display: flex;
     width: 100%;
     min-height: 70vh;
-    background-color: #6256cf;
+    background-color: #c1eefc;
     border-radius: 20px;
 }
 .left{
@@ -39,7 +39,7 @@ main {
     font-weight: bolder;
     font-size: 20px;
     letter-spacing: 1px;
-    color: rgb(248, 251, 255);
+    color: #000914;
 }
 .actual-hour {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
